@@ -15,14 +15,11 @@ tmp*.R
 tmp_euler_compare.R
 workflow*
 run_cov.R
-
 R/tmp.R
 R/seqsetvis.Rcheck
 R/*.bu
 R/functions_annotation.R
 R/old_sources
 R/functions_bam_fetch.R
-
-
 tests/testthat/*.bu
-
+dev_fetch_bam.R
