@@ -59,3 +59,58 @@ safeBrew = function(n, pal = "Dark2"){
     nbrew = min(max(n, 3), maxColors)
     RColorBrewer::brewer.pal(n = nbrew, name = pal_info[pal,]$brewName)[(seq_len(n)-1) %% maxColors + 1]
 }
+
+# x: the vector n: the number of samples centered: if FALSE, then average current sample and previous (n-1) samples if TRUE, then average symmetrically in past and
+# future. (If n is even, use one more sample from future.)
+# from http://www.cookbook-r.com/Manipulating_data/Calculating_a_moving_average/
+movingAverage <- function(x, n = 1, centered = T) {
+
+    if (centered) {
+        before <- floor((n - 1)/2)
+        after <- ceiling((n - 1)/2)
+    } else {
+        before <- n - 1
+        after <- 0
+    }
+
+    # Track the sum and count of number of non-NA items
+    s <- rep(0, length(x))
+    count <- rep(0, length(x))
+
+    # Add the centered data
+    new <- x
+    # Add to count list wherever there isn't a
+    count <- count + (!is.na(new))
+    # Now replace NA_s with 0_s and add to total
+    new[is.na(new)] <- 0
+    s <- s + new
+
+    # Add the data from before
+    i <- 1
+    while (i <= before) {
+        # This is the vector with offset values to add
+        new <- c(rep(NA, i), x[1:(length(x) - i)])
+
+        count <- count + (!is.na(new))
+        new[is.na(new)] <- 0
+        s <- s + new
+
+        i <- i + 1
+    }
+
+    # Add the data from after
+    i <- 1
+    while (i <= after) {
+        # This is the vector with offset values to add
+        new <- c(x[(i + 1):length(x)], rep(NA, i))
+
+        count <- count + (!is.na(new))
+        new[is.na(new)] <- 0
+        s <- s + new
+
+        i <- i + 1
+    }
+
+    # return sum divided by count
+    s/count
+}
