@@ -1,5 +1,5 @@
 ---
-title: "CTCF binding in breast cancer cell lines: From GEO"
+title: "The **seqsetvis** package"
 author: "Joseph R Boyd"
 output:
   BiocStyle::html_document:
@@ -10,7 +10,7 @@ vignette: >
     %\VignetteEngine{knitr::rmarkdown}
     %\VignetteEncoding{UTF-8}
 ---
-  
+
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
     collapse = TRUE
@@ -19,40 +19,42 @@ knitr::opts_chunk$set(
 
 # Abstract
 `r Githubpkg("jrboyd/seqsetvis")` is an R package for the visual
-comparison of sets of genomic regions.  This covers straightforward overlaps 
+comparison of sets of genomic regions (typically ChIP-seq peak calls).  
+This covers straightforward overlaps 
 suitable for something like a Venn diagram and extends to more sophisticated 
 visualization of continous signal data via clustered heatmaps and track-like 
 line plots.  
 
-Key Features
+# Features
 
 * Mostly it "just works" with minimal assumed knowledge of R or other 
 Bioconductor packages.
 * All plots produced are `r CRANpkg("ggplot2")` objects. 
-    + easily customized according to user preferences by appending ggplot2 functions.
-    + powerful plot arrangement with with `r CRANpkg("cowplot")`, `r CRANpkg("gridExtra")`, etc.
++ easily customized according to user preferences by appending *ggplot2* functions.
++ powerful plot arrangement with with `r CRANpkg("cowplot")`, `r CRANpkg("gridExtra")`, etc.
 * Although various plots are implemented, the underlying data are simple in 
 structure and easily accessible so **you** can do what **you** want with them.
-    + membership table for feature overlaps is just a logical matrix.
-    + signal data is stored in a tidy formatted `r CRANpkg("data.table")`, ideal for `r CRANpkg("ggplot2")` visualization.
-    
++ membership table for feature overlaps is just a logical matrix.
++ signal data is stored in a tidy formatted `r CRANpkg("data.table")`, ideal for `r CRANpkg("ggplot2")` visualization.
 
 Although initially designed to focus on peak call sets, *seqsetvis* is flexile and 
 accepts any data in *GRanges* format and is therefore flexible enough to work dowstream of 
-many genomics tools.  Indeed, set comparison visualizations are genomics 
+many genomics tools and packages.  Indeed, set comparison visualizations are genomics 
 agnostic and also accept generic data types defining sets.  
 
+# Functions
+
+* `ssv*` - most primary user facing functions are prefixed by ssv
++ `ssvOverlapIntervalSets` - derives sets from a list of GRanges
++ `ssvMakeMembTable` - coerces various ways of defining sets to a membership table
++ `ssvFeature*` - visualizations of set counts and overlaps
++ `ssvSignal*` - visualizations of signal mapped to genomic coordinates in sets context
+* utility functions
++ `easyLoad_*` - loads files into a list of GRanges for input into `ssv*` functions
++ `fetch*` - grabs data from .bigwig and .bam files
++ miscellaneous but potentially handy functions such as wrappers for data.table functions.
 
 
-This consists of 2 stages:
-
-1. 3-way overlap of CTCF peaks in 3 cell lines to create a single merged regions 
-set with 3 logical attributes.
-2. Retrieval of binding profiles around merged regions set.
-
-Both stages are supported by several plotting functions.
-
-# Functionality Overview
 
 # Installation and Loading
 
@@ -80,14 +82,21 @@ devtools::install_github("jrboyd/seqsetvis", build_vignettes = TRUE)
 library(seqsetvis)
 ```
 
+## Load optional useful libraries
+```{r, message = FALSE}
+library(GenomicRanges)
+library(data.table)
+```
+
 # Defining sets
 *seqsetvis* has several ways of accepting set information.  Since *seqsetvis* was 
 originally intended to focus on comparing sets of peak calls, a list of 
-*GRanges* or a *GRangesList* is directly supported but there are several alternatives.
+*GRanges* or a *GRangesList* is directly supported but there are more
+generic alternatives.
 
 ## Overlapping a list of *GRanges*
-Many functions in \code{seqsetvis} require some kind of sets definition
-as input.  Sets can be defined in one of several ways.  \code{ssvOverlapIntervalSets} creates 
+Many functions in *seqsetvis* require some kind of sets definition
+as input.  Sets can be defined in one of several ways.  `ssvOverlapIntervalSets()` creates 
 a single *GRanges* from a list of *GRanges*
 with a logical membership table as metadata columns defining sets.
 ```{r}
@@ -95,18 +104,19 @@ olaps = ssvOverlapIntervalSets(CTCF_in_10a_narrowPeak_grs)
 head(olaps)
 ```
 
-\code{ssvOverlapIntervalSets} also accepts a *GRangesList* if that's more natural.
+`ssvOverlapIntervalSets()` also accepts a *GRangesList* if that's more natural.
 ```{r}
 olaps_fromGRangesList = ssvOverlapIntervalSets(GenomicRanges::GRangesList(CTCF_in_10a_narrowPeak_grs))
 ```
 
-The membership data contained in the metadata columns of \code{olaps} is  
-the data structure *seqsetvis* functions use internally.  The S4 method
-\code{ssvMakeMembTable} handles the necessary conversions and can be extended 
+The membership data contained in the metadata columns of `olaps` is  
+the data structure *seqsetvis* set overlap functions use internally.  
+The S4 method `ssvMakeMembTable()` handles the necessary conversions and 
+can be extended 
 to accept a new class of data as long as it converts to an already accepted 
 data type and calls ssvMakeMembTable again.
 
-For instance, \code{ssvMakeMembTable(olaps)} extracts the membership table from
+For instance, `ssvMakeMembTable(olaps)` extracts the membership table from
 the mcols of a single *GRanges* object.
 ```{r}
 head(ssvMakeMembTable(olaps))
@@ -133,7 +143,7 @@ Notice the rownames changed too.
 
 
 
-# Visualization of Overlaps, ssvFeature
+# Visualization of Overlaps, ssvFeature*
 The ssvFeature* family of functions all accept a valid set definition and output
 a ggplot.  
 
@@ -142,6 +152,7 @@ Barplots are useful for for conveying the size of each set/group.
 ```{r}
 ssvFeatureBars(olaps)
 ```
+
 ## Pie chart
 Pie charts are an alternative to barplots but are generally more difficult to 
 interpret.
@@ -156,13 +167,15 @@ will be increased in a future update.
 ```{r}
 ssvFeatureVenn(olaps)
 ```
+
 ## Euler diagram
 Often confused with Venn diagrams, Euler diagrams attempt to convey the size
 of each set and the degree to which the overlap with circles or ellipses of
 varying sizes.  For data of any appreciable complexity, Euler diagrams are 
 approximations by neccessity.
+
 There is no limit to the number of sets *seqsetvis* can show in an Euler diagram
-but computation time increases rapidly along with the amount of approximation.
+but computation time increases rapidly along with the inaccuracy of approximation.
 ```{r}
 ssvFeatureEuler(olaps)
 ```
@@ -171,7 +184,9 @@ Ellipse variant of Euler diagram
 ```{r}
 ssvFeatureEuler(olaps, shape = "ellipse")
 ```
+
 ## Binary Heatmap 
+
 An alternative to Venn/Euler diagrams, this "heatmap" contains one column per 
 set and one row per item with item membership per set mapped to color.
 In this example black indicates TRUE for membership hence the top 2/3 is black
@@ -180,11 +195,47 @@ for all three sets.
 ssvFeatureBinaryHeatmap(olaps, raster_approximation = FALSE)
 ```
 
+# Visualization of genomic signal in overlaps context, ssvSignal*
+
+The ssvSignal* family of functions all take as input continuous signal data 
+mapped to the genome.  This type of data is generally stored in bedGraph, 
+wiggle, or bigWig format.  At this time, *seqsetvis* only directly supports the
+bigWig format.  This is done via the `fetchWindowedBigwig()` and 
+`fetchWindowedBigwigList()` functions.
+
+If you don't have .bigWig (or .bigwig or .bw) files you should be able to 
+easily generate some using \code{r Biocpkg("rtracklayer")} `export.bw()` alongside `import.bedGraph()`
+or `import.wig()` as appropriate.
+
+```{r}
+bigwig_files = c(
+    system.file("extdata", "MCF10A_CTCF_FE_random100.bw", 
+                package = "seqsetvis"),
+    system.file("extdata", "MCF10AT1_CTCF_FE_random100.bw", 
+                package = "seqsetvis"),
+    system.file("extdata", "MCF10CA1_CTCF_FE_random100.bw", 
+                package = "seqsetvis")
+)
+names(bigwig_files) = sub("_FE_random100.bw", "", basename(bigwig_files))
+
+olap_gr = CTCF_in_10a_overlaps_gr
+target_size = quantile(width(olap_gr), .75)
+window_size = 50
+target_size = round(target_size / window_size) * window_size
+olap_gr = resize(olap_gr, target_size, fix = "center")
+bw_gr = fetchWindowedBigwigList(bigwig_files, olap_gr, win_size = window_size)
+bw_gr
+```
+
+# Example: CTCF in breast cancer
+
+CTCF binding in 3 breast cancer cell lines
 
 ## Loading Libraries
 
+We'll use `r CRANpkg("cowplot")` to arrange our plots at the end.
+
 ```{r, message = FALSE}
-library(rtracklayer)
 library(cowplot)
 ```
 
@@ -195,7 +246,6 @@ via [GEO](https://www.ncbi.nlm.nih.gov/geo/).
 To download the full dataset see: [narrowPeak from GEO](#np_load)
 
 ```{r}
-# load 
 # set filepaths
 np_files = c(
     system.file("extdata", "MCF10A_CTCF_random100.narrowPeak", 
@@ -350,3 +400,5 @@ for(i in seq_along(bw_urls)){
 bw_files
 #bw_files is now a valid input for fetchWindowedBigwigList()
 ```
+    
+    
