@@ -1,6 +1,12 @@
 # setsetvis 0.99.5
 
-* added easyLoad_narrowPeak and easyLoad_broadPeak
+* added easyLoad_narrowPeak() and easyLoad_broadPeak()
+* added ssvFactorizeMembTable() for converting membership table to factor
+* added movingAverage() from r cookbook
+
+minor changes
+
+* renamed vignette to seqsetvis_overview.Rmd
 
 # seqsetvis 0.99.4
 
